# unitree_actuator_sdk

./: CMakeLists.txt  README.md
example/: changeID.cpp  example_a1_motor.cpp  example_a1_motor_output.cpp  example_b1_motor.cpp  example_goM8010_6_motor.cpp  main.cpp
include/IOPort/: IOPort.h
include/crc/: crc32.h  crc_ccitt.h
include/serialPort/: SerialPort.h
include/serialPort/include/: errorClass.h
include/unitreeMotor/: unitreeMotor.h
include/unitreeMotor/include/: motor_msg.h  motor_msg_A1B1.h  motor_msg_GO-M8010-6.h
motor_tools/: README.md
motor_tools/Unitree_MotorTools_v0.2.0_ARM32_Linux/: cancelboot  changeid  swboot  swmotor  unisp
motor_tools/Unitree_MotorTools_v0.2.0_ARM64_Linux/: cancelboot  changeid  swboot  swmotor  unisp
motor_tools/Unitree_MotorTools_v0.2.0_x86_64_Linux/: cancelboot  changeid  swboot  swmotor  unisp
motor_tools/Unitree_MotorTools_v1.2.4_arm32_Linux/: cancelboot  changeid  swboot  swmotor  unisp
motor_tools/Unitree_MotorTools_v1.2.4_arm64_Linux/: cancelboot  changeid  swboot  swmotor  unisp
motor_tools/Unitree_MotorTools_v1.2.4_x86_64_Linux/: cancelboot  changeid  swboot  swmotor  unisp
python/: example_a1_motor.py  example_b1_motor.py  example_goM8010_6_motor.py
